fix: Align header and content

--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -9,6 +9,8 @@ body {
 
 img {
   width: 600px;
+
+  margin-bottom: 14px;
 }
 
 button {
@@ -16,6 +18,8 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+
+  padding: 8px 14px;
 }
 
 input {
@@ -23,4 +27,27 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+
+  margin-bottom: 12px;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0; margin: 0;
+  display: flex;
+  gap: 20px;
+}
+a {
+  text-decoration: none;
+  color: #575757;
+}
+.header {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+}
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
